syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";

service AuthService {
  rpc Signup (SignupRequest) returns (SignupResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {}
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
}

message SignupRequest {
  string email = 1 [(buf.validate.field).string.email = true];
  string password = 2 [(buf.validate.field).string.min_len = 6];
  string password_confirmation = 3;
  string first_name = 4 [(buf.validate.field).string.min_len = 1];
  string last_name = 5 [(buf.validate.field).string.min_len = 1];
}
message SignupResponse {}

message LoginRequest {
  string email = 1 [(buf.validate.field).string.email = true];
  string password = 2 [(buf.validate.field).string.min_len = 1];
}
message LoginResponse {
  string access_token = 1;
}

message RefreshTokenRequest {}
message RefreshTokenResponse {
  string access_token = 1;
}

message LogoutRequest {}
message LogoutResponse {}

message VerifyEmailRequest {
  string token = 1 [(buf.validate.field).string.min_len = 1];
}
message VerifyEmailResponse {}

message ResetPasswordRequest {
  string email = 1 [(buf.validate.field).string.email = true];
}
message ResetPasswordResponse {}

message UpdatePasswordRequest {
  string token = 1 [(buf.validate.field).string.uuid = true];
  string password = 2 [(buf.validate.field).string.min_len = 6];
  string password_confirmation = 3;
}
message UpdatePasswordResponse {}
